k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myroutemap
  labels:
    name: myroutemap
    environment: production
